# NQueens

./: CMakeLists.txt  README.md
Source/: CMakeLists.txt  NQBackTrackingSolver.cc  NQBackTrackingSolver.hh  NQDLXSolver.cc  NQDLXSolver.hh  NQDisplay.cc  NQDisplay.hh  NQSolver.hh  NQSymmetryFilter.cc  NQSymmetryFilter.hh  NQTypeDefs.cc  NQTypeDefs.hh  NQueens.cc
